Fix Sidebar overflow (fixes #19) (#20)

--- a/spark-board-ui/src/sidebar.css
+++ b/spark-board-ui/src/sidebar.css
@@ -1,6 +1,8 @@
 .sidebar__preferences {
     padding: 6px;
     background-color: rgb(240, 240, 240);
+    overflow: auto;
+    max-height: 100vh;
 }
 
 .sidebar__collapsible .content {
